# ruckus-svn

trunk/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.am_new  Makefile.in  README  aclocal.m4  autogen.sh  autogen.sh_new  config.h  config.status  configure  configure.in  configure.in_new  libtool  ruckus.glade  ruckus.glade.bak  ruckus.gladep.bak
trunk/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
trunk/src/: Makefile  Makefile.am  Makefile.in  main_window.cc  main_window.hh  main_window_glade.cc  main_window_glade.hh  ruckus.cc  ruckus.hh  ruckusGUI.cc  ruckusGUI.hh  ruckusGUI_glade.cc  ruckusGUI_glade.hh  xmms2client.cc  xmms2client.hh
trunk/src/.deps/: carxmms2.Po  client.Po  main_window.Po  main_window_glade.Po  ruckus.Po  window1.Po  window1_glade.Po
